Data Analaysis and Preprocessing

--- a/notebooks/analysis_preprocessing.ipynb
+++ b/notebooks/analysis_preprocessing.ipynb
@@ -678,6 +678,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Dataset Overview**\n",
+    "\n",
+    "### **Short Summary**\n",
+    "\n",
+    "The dataset contains **151,112** records with the following features:\n",
+    "\n",
+    "- **user_id:** \n",
+    "  - Ranges from 2 to 400,000, \n",
+    "  - Mean: 200,171.04.\n",
+    "\n",
+    "- **purchase_value:** \n",
+    "  - Ranges from 9 to 154, \n",
+    "  - Mean: 36.94, \n",
+    "  - Standard Deviation: 18.32.\n",
+    "\n",
+    "- **age:** \n",
+    "  - Ranges from 18 to 76, \n",
+    "  - Mean: 33.14, \n",
+    "  - Standard Deviation: 8.62.\n",
+    "\n",
+    "- **ip_address:** \n",
+    "  - Values range significantly, indicating a wide geographical distribution.\n",
+    "\n",
+    "- **class:** \n",
+    "  - Binary variable with a mean of 0.09, suggesting a low prevalence of the positive class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -771,6 +802,31 @@
     "print(\"     📋 Statistical Summary of Object Data Features:\")\n",
     "print(\"============================================================\")\n",
     "object_summary_statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Additional Data Features**\n",
+    "\n",
+    "The dataset further includes:\n",
+    "\n",
+    "- **device_id:** \n",
+    "  - 137,956 unique values, \n",
+    "  - Most frequent device ID: CQTUVBYIWWWBC (appears 20 times).\n",
+    "\n",
+    "- **source:** \n",
+    "  - 3 unique sources, \n",
+    "  - Most common source: SEO (accounting for 60,615 records).\n",
+    "\n",
+    "- **browser:** \n",
+    "  - 5 unique browsers, \n",
+    "  - Most used: Chrome (appearing in 61,432 records).\n",
+    "\n",
+    "- **sex:** \n",
+    "  - 2 unique categories (M/F), \n",
+    "  - Predominant category: M (Male), recorded 88,293 times."
    ]
   }
  ],
