Completed analysis and preprocessing

--- a/notebooks/analysis_preprocessing.ipynb
+++ b/notebooks/analysis_preprocessing.ipynb
@@ -3518,6 +3518,309 @@
     "\n",
     "print(\"Saved as 'merged_fraud_data.csv'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Feature Engineering**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing FeatureEngineering with the provided DataFrame...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the class\n",
+    "from feature_engineering import FeatureEngineering\n",
+    "\n",
+    "# Initialize the FeatureEngineering class\n",
+    "print(\"Initializing FeatureEngineering with the provided DataFrame...\")\n",
+    "feature_engineering = FeatureEngineering(merged_data, logger)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting the data processing pipeline...\n",
+      "Data processing complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the data processing pipeline\n",
+    "print(\"Starting the data processing pipeline...\")\n",
+    "feature_engineering.pipeline()\n",
+    "print(\"Data processing complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving the processed DataFrame...\n",
+      "Displaying the first few rows of the processed data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>purchase_value</th>\n",
+       "      <th>age</th>\n",
+       "      <th>class</th>\n",
+       "      <th>fraud_rate</th>\n",
+       "      <th>hour_of_day</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>purchase_delay</th>\n",
+       "      <th>user_transaction_frequency</th>\n",
+       "      <th>device_transaction_frequency</th>\n",
+       "      <th>user_transaction_velocity</th>\n",
+       "      <th>source_Direct</th>\n",
+       "      <th>source_SEO</th>\n",
+       "      <th>browser_FireFox</th>\n",
+       "      <th>browser_IE</th>\n",
+       "      <th>browser_Opera</th>\n",
+       "      <th>browser_Safari</th>\n",
+       "      <th>sex_M</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>247547</th>\n",
+       "      <td>0.549607</td>\n",
+       "      <td>-0.363124</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.233869</td>\n",
+       "      <td>-1.231124</td>\n",
+       "      <td>1.487911</td>\n",
+       "      <td>-0.413800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.259874</td>\n",
+       "      <td>-0.232945</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220737</th>\n",
+       "      <td>-1.197335</td>\n",
+       "      <td>0.101168</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.259767</td>\n",
+       "      <td>1.229002</td>\n",
+       "      <td>-0.505034</td>\n",
+       "      <td>-1.180852</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.259874</td>\n",
+       "      <td>-0.232943</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390400</th>\n",
+       "      <td>0.385831</td>\n",
+       "      <td>-0.479197</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.354204</td>\n",
+       "      <td>1.663142</td>\n",
+       "      <td>0.989675</td>\n",
+       "      <td>-0.936126</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.116936</td>\n",
+       "      <td>-0.232944</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69592</th>\n",
+       "      <td>0.986342</td>\n",
+       "      <td>-0.363124</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.354204</td>\n",
+       "      <td>0.650149</td>\n",
+       "      <td>0.989675</td>\n",
+       "      <td>0.867086</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.259874</td>\n",
+       "      <td>-0.232946</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174987</th>\n",
+       "      <td>0.767974</td>\n",
+       "      <td>0.449387</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.259767</td>\n",
+       "      <td>-1.086411</td>\n",
+       "      <td>-1.003270</td>\n",
+       "      <td>1.700633</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.259874</td>\n",
+       "      <td>-0.232946</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         purchase_value       age  class  fraud_rate  hour_of_day  \\\n",
+       "user_id                                                             \n",
+       "247547         0.549607 -0.363124      0   -0.233869    -1.231124   \n",
+       "220737        -1.197335  0.101168      0   -1.259767     1.229002   \n",
+       "390400         0.385831 -0.479197      0   -0.354204     1.663142   \n",
+       "69592          0.986342 -0.363124      0   -0.354204     0.650149   \n",
+       "174987         0.767974  0.449387      0   -1.259767    -1.086411   \n",
+       "\n",
+       "         day_of_week  purchase_delay  user_transaction_frequency  \\\n",
+       "user_id                                                            \n",
+       "247547      1.487911       -0.413800                         0.0   \n",
+       "220737     -0.505034       -1.180852                         0.0   \n",
+       "390400      0.989675       -0.936126                         0.0   \n",
+       "69592       0.989675        0.867086                         0.0   \n",
+       "174987     -1.003270        1.700633                         0.0   \n",
+       "\n",
+       "         device_transaction_frequency  user_transaction_velocity  \\\n",
+       "user_id                                                            \n",
+       "247547                      -0.259874                  -0.232945   \n",
+       "220737                      -0.259874                  -0.232943   \n",
+       "390400                       0.116936                  -0.232944   \n",
+       "69592                       -0.259874                  -0.232946   \n",
+       "174987                      -0.259874                  -0.232946   \n",
+       "\n",
+       "         source_Direct  source_SEO  browser_FireFox  browser_IE  \\\n",
+       "user_id                                                           \n",
+       "247547             0.0         1.0              0.0         0.0   \n",
+       "220737             0.0         1.0              0.0         0.0   \n",
+       "390400             0.0         0.0              0.0         1.0   \n",
+       "69592              1.0         0.0              0.0         0.0   \n",
+       "174987             0.0         1.0              0.0         0.0   \n",
+       "\n",
+       "         browser_Opera  browser_Safari  sex_M  \n",
+       "user_id                                        \n",
+       "247547             0.0             1.0    0.0  \n",
+       "220737             0.0             0.0    0.0  \n",
+       "390400             0.0             0.0    1.0  \n",
+       "69592              0.0             0.0    0.0  \n",
+       "174987             0.0             0.0    0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Retrieve and display the processed DataFrame\n",
+    "print(\"Retrieving the processed DataFrame...\")\n",
+    "processed_data = feature_engineering.get_processed_data()\n",
+    "print(\"Displaying the first few rows of the processed data:\")\n",
+    "display(processed_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving the processed data to ../data/processed_fraud_data.csv...\n",
+      "✅ Data saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_file_path = '../data/processed_fraud_data.csv'\n",
+    "print(f\"Saving the processed data to {output_file_path}...\")\n",
+    "processed_data.to_csv(output_file_path, index=False)\n",
+    "print(\"✅ Data saved successfully!\")"
+   ]
   }
  ],
  "metadata": {
