Fraud detection Model with ML Flow

--- a/notebooks/fraud_detection_pipeline.ipynb
+++ b/notebooks/fraud_detection_pipeline.ipynb
@@ -1928,7 +1928,146 @@
     }
    ],
    "source": [
-    "pd.DataFrame(results_creditcard).T"
+    "result = pd.DataFrame(results_creditcard).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Fraud Detection Model with MLflow**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "import mlflow.keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/10 18:46:43 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Successfully registered model 'Fraud_Detection_Model'.\n",
+      "2025/02/10 18:46:43 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: Fraud_Detection_Model, version 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model training complete. Metrics logged in MLflow.\n",
+      "🏃 View run 4de45edcdf0845d8a2f6572bce35b2a5 at: http://127.0.0.1:5000/#/experiments/254910024325914828/runs/4de45edcdf0845d8a2f6572bce35b2a5\n",
+      "🏃 View run FraudDetectionRun at: http://127.0.0.1:5000/#/experiments/254910024325914828/runs/4de45edcdf0845d8a2f6572bce35b2a5\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/254910024325914828\n",
+      "✅ Model registered successfully!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '1' of model 'Fraud_Detection_Model'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")  \n",
+    "mlflow.set_experiment(\"Fraud Detection Experiment\")\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"FraudDetectionRun\") as run:  # Capture run object\n",
+    "    # Log model hyperparameters\n",
+    "    mlflow.log_params({\n",
+    "        \"model_type\": \"Random Forest\",\n",
+    "        \"n_estimators\": 50,\n",
+    "        \"max_depth\": 5\n",
+    "    })\n",
+    "\n",
+    "    # Train the model\n",
+    "    from sklearn.ensemble import RandomForestClassifier\n",
+    "    from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "    rf_model = RandomForestClassifier(n_estimators=50, max_depth=5)\n",
+    "    rf_model.fit(X_fraud_resampled, y_fraud_resampled)\n",
+    "\n",
+    "    # Make predictions\n",
+    "    y_pred = rf_model.predict(X_test_fd)\n",
+    "    y_prob = rf_model.predict_proba(X_test_fd)[:, 1]\n",
+    "\n",
+    "    # Evaluate Model\n",
+    "    metrics = {\n",
+    "        \"accuracy\": accuracy_score(y_test_fd, y_pred),\n",
+    "        \"precision\": precision_score(y_test_fd, y_pred),\n",
+    "        \"recall\": recall_score(y_test_fd, y_pred),\n",
+    "        \"f1_score\": f1_score(y_test_fd, y_pred),\n",
+    "        \"roc_auc\": roc_auc_score(y_test_fd, y_prob),\n",
+    "    }\n",
+    "\n",
+    "    # Log evaluation metrics\n",
+    "    mlflow.log_metrics(metrics)\n",
+    "\n",
+    "    # Log the model\n",
+    "    mlflow.sklearn.log_model(rf_model, \"random_forest_model\")\n",
+    "\n",
+    "    print(f\"✅ Model training complete. Metrics logged in MLflow.\")\n",
+    "    print(f\"🏃 View run {run.info.run_id} at: http://127.0.0.1:5000/#/experiments/{run.info.experiment_id}/runs/{run.info.run_id}\")\n",
+    "\n",
+    "# 🛠 Use `run.info.run_id` instead of `mlflow.active_run()`\n",
+    "mlflow.register_model(\n",
+    "    f\"runs:/{run.info.run_id}/random_forest_model\", \"Fraud_Detection_Model\"\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Model registered successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Fraud Detection Model with MLflow**\n",
+    "\n",
+    "📌 **Overview**\n",
+    "\n",
+    "This project builds a Fraud Detection Model using Random Forest Classifier and tracks experiments with MLflow. The model is trained on resampled fraud data and evaluated on test data, with all metrics and artifacts logged to MLflow.\n",
+    "\n",
+    "🚀 **Features**\n",
+    "\n",
+    "+ MLflow Experiment Tracking: Logs parameters, metrics, and artifacts.\n",
+    "\n",
+    "+ Random Forest Classifier: Trained with resampled fraud data.\n",
+    "\n",
+    "+ Automatic Model Registration: Saves the trained model in MLflow.\n",
+    "\n",
+    "+ Performance Evaluation: Logs accuracy, precision, recall, F1-score, and ROC-AUC.\n",
+    "  \n",
+    "📊 **Model Evaluation Metrics**\n",
+    "\n",
+    "| Metric      | Description                                                  |\n",
+    "|-------------|--------------------------------------------------------------|\n",
+    "| Accuracy    | Measures overall correctness                                  |\n",
+    "| Precision   | Measures how many predicted fraud cases are actual fraud     |\n",
+    "| Recall      | Measures how many actual fraud cases were detected           |\n",
+    "| F1 Score    | Balances precision and recall                                 |\n",
+    "| ROC AUC     | Measures the model’s ability to distinguish between fraud and non-fraud |\n",
+    "\n",
+    "📌 **Notes**\n",
+    "\n",
+    "+ Ensure MLflow Tracking Server is running before executing the script.\n",
+    "\n",
+    "+ The model is automatically registered in MLflow.\n",
+    "  \n",
+    "### ✅ Happy Experimenting with MLflow! 🚀"
    ]
   }
  ],
